# unixcw

./: .clang-tidy  ChangeLog  Makefile.am  Makefile.in  Makefile.inc.in  NEWS  README  README.dev.org  autogen.sh  configure  configure.ac  unixcw-3.6.1.lsm
debian/: changelog  control  copyright  cw.install  cwcp.install  libcw-dev.install  libcw8-dev.install  libcw8.dirs  libcw8.install  not-installed  rules  watch  xcwcp.desktop  xcwcp.install
debian/po/: de.po  it.po
debian/upstream/: metadata
qa/: build_debian_packages.sh  compile_headers.sh  prerelease_checklist.org  run_clang_tidy.sh  run_cppcheck.sh  test_configure_flags.sh  test_configure_options.sh
qa/release_checklist/: 3.6.1.org  template.org
qa/test_scenarios/: 3.6.0.org  template.org  tests_3.6.1.org
src/: Makefile.in  config.h.in
src/cw/: Makefile.am  Makefile.in  cw.1  cw.c  cw.h  demo.cw  prelude.cw  test.cw
src/cw/tests/: basic_options.sh
src/cwcp/: Makefile.am  Makefile.in  cwcp.1  cwcp.c
src/cwgen/: Makefile.am  Makefile.in  Makefile.port.in  cwgen.1  cwgen.c
src/cwgen/tests/: Makemodule.am  cwgen_args.c  wordset.c  wordset.h
src/cwutils/: Makefile.am  Makefile.in  README.md  cw_cmdline.c  cw_cmdline.h  cw_common.c  cw_common.h  cw_config.c  cw_config.h  cw_copyright.h  cw_easy_legacy_receiver.c  cw_easy_legacy_receiver.h  cw_easy_legacy_receiver_internal.h  cw_easy_rec.c  cw_easy_rec.h  cw_rec_tester.c  cw_rec_tester.h  cw_rec_utils.c  cw_rec_utils.h  cw_words.h  dictionary.c  dictionary.h  i18n.c  i18n.h  memory.c  memory.h  sleep.c  sleep.h  test_framework_tools.c  test_framework_tools.h  wav_state_detector.c
src/cwutils/lib/: Makefile.am  Makefile.in  element_stats.c  element_stats.h  elements.c  elements.h  elements_detect.c  elements_detect.h  misc.c  misc.h  random.c  random.h  wav.c  wav.h
src/cwutils/tests/: Makefile.am  Makefile.in  Makemodule.am  cmdline_combine_arguments.c  cmdline_combine_arguments.h  main.c
src/cwutils/wav_state_detector/: Makemodule.am  main.c
src/libcw/: Makefile.am  Makefile.in  cw.7  include.awk  libcw.3.m4  libcw.c  libcw.h  libcw.pc.in  libcw2.h  libcw_alsa.c  libcw_console.c  libcw_data.c  libcw_debug.c  libcw_debug.h  libcw_debug.py  libcw_debug_internal.h  libcw_gen.c  libcw_gen.h  libcw_gen_internal.h  libcw_key.c  libcw_null.c  libcw_oss.c  libcw_pa.c  libcw_rec.c  libcw_rec.h  libcw_signal.c  libcw_tq.c  libcw_utils.c  libcw_utils.h  libdoc.awk  libfuncs.awk  libpc.awk  libsigs.awk  libtest.awk
src/libcw/tests/: Makefile.am  Makefile.in  README  common.c  common.h  count_functions_under_test.py  libcw_data_tests.c  libcw_debug_tests.c  libcw_gen_tests.c  libcw_gen_tests.h  libcw_gen_tests_debug_pcm_file_timings.c  libcw_gen_tests_debug_pcm_file_timings.h  libcw_gen_tests_state_callback.c  libcw_key_tests.c  libcw_legacy_api_tests.c  libcw_legacy_api_tests.h  libcw_legacy_api_tests_rec_poll.c  libcw_rec_tests.c  libcw_test_tq_short_space.c  libcw_tq_tests.c  libcw_utils_tests.c  test_data.c  test_framework.c  test_framework.h  test_main.c  test_sets.c
src/libcw/tests/legacy/: cw_get_receive_parameters.c  cw_get_receive_parameters.h  cw_get_send_parameters.c  cw_get_send_parameters.h
src/test_framework/: Makefile.am  Makefile.in  README.md
src/test_framework/basic_utils/: Makefile.am  Makefile.in  param_ranger.c  param_ranger.h  resource_meas.c  resource_meas.h  test_result.c  test_result.h
src/xcwcp/: Makefile.am  Makefile.in  application.cc  application.h  main.cc  modeset.cc  modeset.h  receiver.cc  receiver.h  sender.cc  sender.h  textarea.cc  xcwcp.1
